--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
   z-index: 10000;
 }
 header .logo {
-  color: #fff;
+  color: #5a7499;
   font-weight: 700;
   text-decoration: none;
   font-size: 2em;
@@ -49,7 +49,7 @@ header ul li a {
 header ul li a:hover,
 header ul li a.active {
   background: #fff;
-  color: #2b1055;
+  color: #5a7499;
 }
 section {
   position: relative;
@@ -82,7 +82,11 @@ section img {
   pointer-events: none;
 }
 section img#clouds {
-  margin-left: -1320px;
+  margin-left: -95%;
+  z-index: 10;
+}
+section img#clouds2 {
+  margin-left: -130%;
   z-index: 10;
 }
 section img#ground {
@@ -91,22 +95,26 @@ section img#ground {
 section img#bush {
   z-index: 4;
 }
+p {
+  text-align: justify;
+}
 #text {
   position: absolute;
-  margin-bottom: 310px;
-  color: #fff;
+  margin-bottom: 350px;
+  margin-top: 350px;
+  color: #5a7499;
   white-space: nowrap;
   font-size: 7.5vw;
   z-index: 1;
 }
 #btn {
-  margin-left: 1500px;
+  margin-left: 140%;
   text-decoration: none;
   display: inline-block;
   padding: 8px 30px;
   border-radius: 40px;
   background: #fff;
-  color: #f2a061;
+  color: #5a7499;
   font-size: 1.5em;
   z-index: 11;
   transform: translateY(270px);
@@ -114,7 +122,7 @@ section img#bush {
 .sec {
   position: relative;
   padding: 50px;
-  background: #f2a061;
+  background: #efae5e;
 }
 .sec h2 {
   font-size: 3.5em;
