--- a/Dropbox.css
+++ b/Dropbox.css
@@ -145,7 +145,7 @@ section {
   margin-left: auto;
   margin-right: 10%;
   margin-bottom: auto;
-  margin-top: -30%;
+  margin-top: -17rem;
   background: transparent;
   display: flex;
   font-size: 3vh;
